2004-11-29  David Wetzel <dave@turbocat.de>
        * GSWeb.framework/GSWMessage.h
        * GSWeb.framework/GSWMessage.m
        uses NSMutableData now. 3.74 % faster than previous version

2004-11-26  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWDisplayGroup.m 
	(-displayBatchContainingSelectedObject): Test
	_numberOfObjectsPerBatch to be non-zero before dividing.
	
2004-11-26  David Wetzel <dave@turbocat.de>
	
        * GSWeb.framework/GSWDynamicURLString.m
        added some speed enhancements

2004-11-22  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWApplication+Defaults.m (TAKEVALUEFORKEY):
	New macro to use new setValue:forKey: instead of takeValue:forKey:
	on Cocoa systems until it is implemented for GNUstep.

2004-11-12  David Ayers  <d.ayers@inode.at>

	* GSWeb.framework/GSWApplication.m (GSWApplicationMainReal):
	Remove assertion for defined GNUSTEP_STRING_ENCODING.
	* GSWeb.framework/GSWDefaultAdaptorThread.m ([+sendResponse:toStream:
	withNamingConv:withAdditionalHeaderLines:withRemoteAddress:]):
	Use contentEncoding of response instead of
	NSISOLatin1StringEncoding.
	* GSWeb.framework/GSWHTMLComment.m ([-init]): Use 
	+[GSWMessage defaultEncoding] instead of
	NSISOLatin1StringEncoding.
	* GSWeb.framework/GSWHTMLDynamicElement.m
	([-addURL:forCIDKeyAssociation:CIDStoreAssociation:inContext:]):
	Use NSUnicodeStringEncoding instead NSISOLatin1StringEncoding for
	hash value.
	* GSWeb.framework/GSWMessage.m ([+initialize]): Set
	globalDefaultEncoding to NSISOLatin1StringEncoding only if
	WOStrictFlag default flag is set.  Otherwise default to
	GetDefEncoding().
	* GSWeb.framework/GSWRequest.m
	([-_formValueEncodingFromFormData:]): Use +[GSWMessage
	defaultEncoding] instead of NSISOLatin1StringEncoding.
	([-_formData], [-_getFormValuesFromMultipartFormDataOld]): Ditto.
	([-_getFormValuesFromMultipartFormData]): Ditto.
	([-_decodeMultipartBody:boundary:], -[_parseData:]): Ditto.